PMDの違反修正とルールファイルの変更 Fixes #18